fix horizontal overflow

--- a/src/styles/messageBox.css
+++ b/src/styles/messageBox.css
@@ -2,10 +2,13 @@
     overflow-y: auto;
     padding: 0.55rem;
     min-height: 100vh;
+    /*This is a bit bandaid-y*/
+    max-width: 92.5vw;
 }
 
 .message-box-container {
     overflow-y: auto;
+    word-wrap: break-word;
 }
 
 .message-user {
